--- a/style copy.css
+++ b/style copy.css
@@ -1,10 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
-}
+* { margin: 0; padding: 0; font-weight: normal;}
 
 body {
   background-color: ghostwhite;
@@ -13,11 +9,8 @@ body {
   text-align: center;
   line-height: 1.25;
 }
-
 /* section = parent to aside, article, or div */
-section {
-  padding: 9vh 0;
-}
+section {padding: 9vh 0;}
 
 /* aside = grid parent container */
 aside {
@@ -58,7 +51,6 @@ article > div {
   width: 320px;
   padding: 6vh 3vh;
 }
-
 article > div > p {
   margin-bottom: 1vh;
   font-weight: 400;
@@ -86,7 +78,6 @@ article > div > p {
   object-fit: cover;
   object-position: center;
 }
-
 .sharp2 {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('img/nightlife.jpg') fixed top;
   background-size: cover;
@@ -94,7 +85,6 @@ article > div > p {
   object-fit: cover;
   object-position: center;
 }
-
 .shdiv {
   max-width: min(600px, 70vw);
   padding: 1vh 0 0 6vw;
@@ -105,8 +95,7 @@ article > div > p {
 
 nav {
   background-color: rgb(150, 150, 148);
-  position: sticky;
-  top: 0;
+  position: sticky; top: 0;
   text-align: right;
   padding: 0.5vh .5vh;
   display: inline-block;
@@ -187,7 +176,7 @@ h5 {
 
 h6 {
   font-size: min(4.5vw, 20px);
-  text-decoration: line-through;
+  text-decoration:line-through;
   line-height: 1.5;
 }
 
@@ -207,3 +196,4 @@ svg, img {
 .swe img {
   margin: 4px;
 }
+
